# stdtensor

./: .clang-format  .gitignore  .travis.yml  BUG  CMakeLists.txt  CODE_OF_CONDUCT  Dockerfile  INSTALL  LICENSE  README  README.md  RFC  azure-pipelines.yml  configure  todo  x
.github/workflows/: linux.yaml  windows.yaml
auto/: cmake
cmake/: benchmarks.cmake  docs.cmake  examples.cmake  gbench.cmake  gtest.cmake  lib.cmake  pack.cmake  stdc++fs.cmake  test.cmake  tests.cmake
docs/: Makefile  ch1.tex  ch2.tex  std-tensor.tex
examples/: example_1.cpp  example_c.c  example_c_api.c  example_opencv.cpp
examples/simple/: example_range.cpp  example_raw_tensor.cpp  example_tensor.cpp
include/: libtensor_config.hpp  libtensor_dtype.hpp  stdtensor  stdtensor.hpp  tensor.h  tensor.hpp
include/bits/: std_data_type_encoding.hpp  std_flat_tensor.hpp  std_generic_shape.hpp  std_generic_tensor.hpp  std_raw_shape.hpp  std_raw_tensor.hpp  std_scalar_type_encoding.hpp  std_shape.hpp  std_tensor.hpp  std_type_encoder.hpp
include/experimental/: type_encoder  type_encoder.hpp
include/stdml/: dtype.hpp  shape.hpp  tensor  tensor.h  tensor.hpp
include/stdml/bits/: device.hpp  dll.hpp  function.hpp  functional.hpp  io.hpp  shape.hpp  tensor.hpp
include/stdml/experimental/: functional
include/ttl/: algorithm  consistent_variable  cuda_tensor  debug  device  flat_shape  functional  host_tensor  operators  range  shape  tensor  type  type_traits
include/ttl/bits/: consistent_variable.hpp  fake_cuda_runtime.hpp  flat_shape.hpp  flat_tensor.hpp  flat_tensor_mixin.hpp  functional.hpp  low_rank_tensor.hpp  mixed_tensor_buffer.hpp  raw_shape.hpp  raw_tensor.hpp  raw_tensor_mixin.hpp  std_access_traits.hpp  std_allocator.hpp  std_base_tensor.hpp  std_copy.hpp  std_cuda_allocator.hpp  std_cuda_runtime.hpp  std_def.hpp  (+33 more)
src/: tensor.cpp  tensor2.cpp
src/stdml/: allocator.cpp  allocator_cuda.c  clib.cpp  device.cpp  dll.cpp  dtype.cpp  function.cpp  shape.cpp  tensor.cpp
test/: shape_test.cpp  tensor_test.cpp
tests/: _test_loc.cpp  bench_cuda_tensor.cpp  benchmark.hpp  fake_cuda_runtime.h  generic_shape_test.cpp  generic_tensor_test.cpp  raw_shape_test.cpp  raw_tensor_test.cpp  shape_test.cpp  tensor_test.cpp  test_algo.cpp  test_consistent_variable.cpp  test_copy.cpp  test_cuda_tensor.cpp  test_device.cpp  test_factory.cpp  test_flat_shape.cpp  test_flat_tensor.cpp  test_functional.cpp  test_include.cpp  test_include_ttl_experimental_low_rank_tensor.cpp  test_include_ttl_flat_shape.cpp  test_include_ttl_tensor.cpp  test_index.cpp  test_loc.cpp  test_mixed_tensor_buffer.cpp  test_operator.cpp  test_operators.cpp  test_public_types.cpp  test_range.cpp  test_raw_shape.cpp  test_raw_tensor.cpp  test_region.cpp  test_scalar.cpp  test_shape.cpp  test_shape_concepts.cpp  test_shape_debug.cpp  test_sparse_matrix.cpp  test_std_encoding.cpp  test_std_tensor_buffer.cpp  (+11 more)
tests/stdml/: test_detect.cpp  test_libtensor.cpp  test_libtensor_show.cpp  test_show.cpp  test_type_type.cpp
(+32 files in other folders)
